apply plugin: 'java'
apply plugin: 'maven'
apply plugin: "org.gretty"

sourceCompatibility = '1.8'
targetCompatibility = '1.8'

buildscript {
  repositories {
    jcenter()
  }

  dependencies {
    classpath 'org.gretty:gretty:+'
  }
}

repositories {
  jcenter()
}

// gradle install -Pmversion=0.5.3
final String DEFAULT_MVERSION = '1.3.5'
allprojects {
	if (!project.hasProperty('mversion') || !mversion) {
		ext.mversion = DEFAULT_MVERSION
	}
}

// Set master version
version = mversion

repositories {
	mavenLocal()
    mavenCentral()
}

// For provided jars
configurations {
	provided
}

ext {
	springVersion = '4.3.28.RELEASE'
	springSecrityVersion = '4.2.6.RELEASE'
	logbackVersion = '1.1.3'
	coreVersion = mversion
	pluginsVersion = '0.1.0'
}

dependencies {
	compile "commons-io:commons-io:2.3"
	compile "commons-collections:commons-collections:3.2"
	compile "org.slf4j:slf4j-api:1.7.5"
	runtime "org.slf4j:jcl-over-slf4j:1.7.5"
	compile "ch.qos.logback:logback-core:1.0.13"
	compile "ch.qos.logback:logback-classic:1.0.13"
    compile "org.springframework:spring-core:" + springVersion
	compile "org.springframework:spring-aop:" + springVersion
	compile "org.springframework:spring-beans:" + springVersion
	compile "org.springframework:spring-web:" + springVersion
	compile "org.springframework:spring-webmvc:" + springVersion
	compile "org.springmodules:spring-modules-jakarta-commons:0.8"
	compile "org.freemarker:freemarker:2.3.17"
	compile "com.googlecode.json-simple:json-simple:1.1.1"
	compile "com.github.cage:cage:1.0"
	provided "org.apache.tomcat:servlet-api:6.0.33"
    testCompile "junit:junit:4.+"
}

/*
 * http://www.sonarqube.org/downloads/
# Gradle
export GRADLE_HOME=/Users/user_name/gradle
export PATH=$GRADLE_HOME/bin:$PATH
# If the contents are garbled, you must put the following option.
export GRADLE_OPTS="-Dfile.encoding=UTF-8 -Xmx512m -XX:PermSize=64m -XX:MaxPermSize=256m"

// http://netframework.tistory.com/401
// https://github.com/Khoulaiz/gradle-jetty-eclipse-plugin
*/

farm {
  // 'jetty7', 'jetty8', 'jetty9', 'jetty93', 'jetty94', 'tomcat7', 'tomcat8'
  servletContainer = 'jetty94'
}

gretty {
	// springBoot = true
	httpPort = 9000
	scanInterval = 1
	// Change context path (base url). otherwise defaults to name of project
	contextPath = ''
	jacocoEnabled = false
}


/* Multi-users environment */
// -Pprofile=develop
final String DEFAULT_PROFILE = 'develop'
allprojects {
	if (!project.hasProperty('profile') || !profile) {
		ext.profile = DEFAULT_PROFILE
	}
	sourceSets {
		main {
			resources {
				srcDir "config/${profile}/resources"
			}
		}
	}
}

